css/styles.css
* {
  font-family: "Roboto", sans-serif;
  margin: 0;
  padding: 0;
}

body,
html {
  height: 100%;
  background-color: #0e3b43;
}

.page-container {
    position: relative;
    min-height: 100vh;
}



#grid-container {
  display: grid;
  grid-template-columns: repeat(16, 0fr);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  z-index: 0;
  border: 2vh solid #357266;
  border-radius: 7px;
}

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 50vh;
  margin-top: 20vh;
  z-index: 0;
}

.white {
  background-color: white;
}

.square {
  border: 1px solid black;
  width: 3.5vh;
  height: 3.5vh;
  transition: all .05s ease-in-out;
}

.square:hover {
  transform: scale(1.3);
  transition: all 0.05s ease-in-out;
}

.black {
  background-color: black;
}

.header {
  text-align: center;
  background-color: #357266;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  z-index: 1;
  overflow: hidden;
}

.header h1 {
  text-align: center;
  color: white;
  padding: 10px;
  font-size: 4em;
  transition: all .3s ease-in-out;
  overflow: hidden;
}

.header h1:hover {
    transform: scale(1.2);
    transition: all .3s ease-in-out;
    overflow: hidden;
}

.buttons {
  display: flex;
  flex-direction: row;
  margin-bottom: 3vh;
  justify-content: space-evenly;
  align-items: center;
  gap: 5vw;
}

.buttons button {
  background-color: EEEBD3;
  border-radius: 28px;
  border: 1px solid #39393b;
  display: inline-block;
  cursor: pointer;
  color: black;
  font-family: Arial;
  font-size: 17px;
  padding: 16px 31px;
  text-decoration: none;
  text-shadow: 0px 1px 0px #67696f;
  transition: all 0.05s ease-in-out
}
.buttons button:hover {
  background-color: #52706a;
  transform: scale(1.1);
  transition: all 0.05s ease-in-out;
}
.buttons button:active {
  position: relative;
  top: 1px;
}

.color_picker .text {
    margin-bottom: 5px;
    color: white;
}

.color_picker {
    display: flex;
    align-items: center;
    flex-direction: column;
}


.footer {
    margin-top: 5vh;
    color: white;
    font-size: 20px;
    margin-bottom: 1vh;
}


.github {
    transition: all .5s ease-in-out;
}

.github:hover {
    transform: rotate(-1turn) scale(1.1);
    transition: all .5s ease-in-out;
}

